--- a/hello.html
+++ b/hello.html
@@ -7,11 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-<<<<<<< HEAD
-    <h1>Hi world.............!!</h1>
-=======
-    <h1 style="color:blue">Hi world.............!</h1>
->>>>>>> 20378c4b19e8a6f2d28878ebe2b1cc01d122e16d
+    <h1 style="color:blue">Hi world.............!!</h1>
     <h2> Hello</h2>
     hello world!
 </body>
