--- a/hello.html
+++ b/hello.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        h1{
+            color:orange;
+        }
+    </style>
     <title>Document</title>
 </head>
 <body>
-    <h1 style="color:blue">Hi world.............!!</h1>
+    <h1>Hi world.............!!</h1>
     <h2> Hello</h2>
     hello world!
 </body>
