--- a/hello.html
+++ b/hello.html
@@ -12,7 +12,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hi world.............!!</h1>
+    <h1>Hi world.............!</h1>
     <h2> Hello</h2>
     hello world!
 </body>
