--- a/hello.html
+++ b/hello.html
@@ -12,11 +12,7 @@
     <title>Document</title>
 </head>
 <body>
-<<<<<<< HEAD
-    <h1 style="color:blue">Hi world.............!!</h1>
-=======
-    <h1>Hi world.............!!</h1>
->>>>>>> styles
+    <h1 style="color:blue">Hi world.............!</h1>
     <h2> Hello</h2>
     hello world!
 </body>
